# openai-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.factory/: init.sh  services.yaml
.factory/research/: openai-public-api-2026.md  reference-sdk-audit.md  rust-sdk-design.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api-coverage.md  architecture-note.md  files-and-vector-stores.md  intentional-gaps.md  llms-full.txt  llms.txt  maintenance.md  migration-guide.md  quickstart.md  responses-guide.md
docs/scripts/: check_links.sh  generate_llms_exports.sh
examples/: chat_completions_migration.rs  embeddings.rs  live_conversations_crud_smoke.rs  live_conversations_items_smoke.rs  live_responses_background_cancel_smoke.rs  live_responses_compact_smoke.rs  live_responses_conflicting_state_smoke.rs  live_responses_store_smoke.rs  request_metadata.rs  responses_quickstart.rs  responses_streaming.rs  scaffold.rs  structured_outputs.rs  upload_to_vector_store.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/blocking/: mod.rs
src/core/: auth.rs  mod.rs  (+7 more)
tests/: audio_speaker_metadata_contract.rs  audio_speech_contract.rs  audio_transcriptions_contract.rs  audio_translations_contract.rs  batches_contract_mock.rs  chat_completions_contract.rs  chat_completions_messages_contract.rs  chat_completions_stream_contract.rs  completions_contract.rs  completions_stream_contract.rs  container_files_contract.rs  containers_contract.rs  conversations_contract_mock.rs  conversations_items_contract_mock.rs  core_blocking.rs  core_config.rs  core_errors.rs  core_headers.rs  core_response_meta.rs  core_retry.rs  core_timeout.rs  cross_surface_contract.rs  docs_contract.rs  embeddings_contract.rs  eval_output_items_contract.rs  eval_runs_contract.rs  evals_contract.rs  files_contract_mock.rs  fine_tuning_contract.rs  fine_tuning_controls_contract.rs  graders_contract.rs  images_contract.rs  images_stream_contract.rs  live_audio_transcription_smoke.rs  live_core_smoke.rs  live_cross_surface_smoke.rs  live_embeddings_or_moderations_smoke.rs  live_eval_output_items_smoke.rs  live_eval_run_smoke.rs  live_evals_crud_smoke.rs  (+42 more)
(+174 files in other folders)
