[package]
name = "openai-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Clean-room Rust SDK scaffold for the OpenAI API"
license = "Apache-2.0"
publish = true

[lib]
name = "openai_rust"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
blocking = []
rustls-tls = []
native-tls = []
webhooks = []
realtime = []

[dependencies]
base64 = "0.22"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
url = "2"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.28"
