[package]
name = "openai-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Independent Rust SDK for the OpenAI API with Responses-first ergonomics and realtime support"
authors = ["Chaitanya Mishra (@staticpayload)"]
license = "Apache-2.0"
repository = "https://github.com/scalarian/openai-rust"
documentation = "https://docs.rs/openai-rust"
homepage = "https://github.com/scalarian/openai-rust"
readme = "README.md"
keywords = ["openai", "api", "sdk", "responses", "rust"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    ".factory/**",
    "references/**",
    "creds.txt",
]
publish = true

[lib]
name = "openai_rust"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
blocking = []
rustls-tls = []
native-tls = []
webhooks = []
realtime = []

[dependencies]
base64 = "0.22"
futures-util = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.28"
